# ripple-kernel

./: .gitignore  .php-cs-fixer.php  README.md  composer.json  phpunit.xml  test-websocket-simple.php
.github/workflows/: ci.yml
docs/superpowers/plans/: 2026-04-29-http-psr7-client-server-decoupling.md
docs/superpowers/specs/: 2026-04-29-http-client-timeouts-protocol-design.md  2026-04-30-runtime-tests-rebuild-design.md
examples/: 04-mutex.php  05-waitgroup.php  06-mutex.php  08-process.php  10-websocket.php  11-http-sse.html  11-http-sse.php
lib/: Cargo.toml  README.md
lib/File/: File.php  FileAbstract.php  FileInterface.php
lib/src/: bridge.rs  lib.rs  ops.rs
src/: Bridge.php  Coroutine.php  Event.php  Functions.php  Process.php  Runtime.php  Stream.php  Time.php
src/Net/: Http.php  WebSocket.php
src/Runtime/: FiberCoroutine.php  HotCoroutinePool.php  MainCoroutine.php  Scheduler.php
src/Stream/: BaseStream.php  RingBuffer.php
src/Sync/: Channel.php  Mutex.php  WaitGroup.php
src/Time/: Ticker.php  Timer.php
src/Watch/: ExtEvWatcher.php  ExtEventWatcher.php  StreamWatcher.php  WatcherFactory.php
temp/: http-client.php
tests/Net/: HttpClientTest.php  HttpFileTransferTest.php
tests/Runtime/: BaseTestCase.php  CombinatorialTestCase.php  README.md
tests/Stream/: RingBufferTest.php  StreamAsyncFlushTest.php  StreamChunkSizeTest.php  StreamEofCheckTest.php  StreamHalfReadThenWriteTest.php  StreamProgressTest.php  StreamWatcherEofTest.php  StreamWriteTimeoutTest.php
tests/Sync/: ChannelTest.php  MutexTest.php  WaitGroupTest.php
(+80 files in other folders)
