[package]
name = "ripple-lib"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
once_cell = "1"

# 支持所有主要平台
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"

[target.'cfg(target_os = "windows")'.dependencies]
winapi = { version = "0.3", features = ["fileapi", "handleapi", "processthreadsapi", "winnt"] }

# 构建配置
[profile.release]
lto = true
codegen-units = 1
panic = "abort"
strip = true

[target.x86_64-unknown-linux-gnu]
rustflags = ["-C", "link-arg=-Wl,--version-script=version.ld"]

[target.aarch64-unknown-linux-gnu]
rustflags = ["-C", "link-arg=-Wl,--version-script=version.ld"]

[target.x86_64-apple-darwin]
rustflags = ["-C", "link-arg=-Wl,-install_name,@rpath/libfile.dylib"]

[target.aarch64-apple-darwin]
rustflags = ["-C", "link-arg=-Wl,-install_name,@rpath/libfile.dylib"]

[target.x86_64-pc-windows-msvc]
rustflags = ["/DEF:file.def"]

[target.i686-pc-windows-msvc]
rustflags = ["/DEF:file.def"]
